# A.I.D.E

./: .gitignore  README.md  configuration.json  index.html  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  tsconfig.node.json
.github/workflows/: codeql.yml
Commands/: get_data.py  new_users.py  users.py
Map/: custom.markers.js  unmined.map.properties.js
Maps/EUtopia_zoom/: unmined.map.players.js  unmined.map.properties.js  unmined.map.regions.js
Maps/LSLN_zoom/: unmined.map.properties.js
Maps/OCube_crusader/: unmined.map.properties.js  unmined.map.regions.js  unmined.openlayers.js
Maps/OCube_crusader_zoom/: unmined.index.html
Maps/OLSLN/: unmined.map.properties.js  unmined.map.regions.js  unmined.openlayers.js
Maps/OLSPLW_zoom/: unmined.map.properties.js
Maps/OStrong_world_zoom/: unmined.map.properties.js  unmined.map.regions.js
Maps/OSurvival_islands_zoom/: unmined.map.properties.js
Maps/OUtopia_zoom/: unmined.map.properties.js
Maps/Utopia_E_zoom/: unmined.map.properties.js
Maps/Utopia_O_zoom/: unmined.map.properties.js  unmined.map.regions.js
Rules/: index.md  message.md
Rules/Lois/: cites.md  (+3 more)
Static/: users.json
Utilities/: __init__.py  checks.py  get_data.py
assets/: index-B_bp6lwv.js  index-D7uXsFcY.css  index-RQQX7lCI.css  index-zUo03eg2.js
backend/: config.py  main.py  requirements.txt
bot_python/: main.py
docs/: index.html  package-lock.json  package.json
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
src/: main.tsx
(+635 files in other folders)
