[tool.poetry]
name = "repl_nix_AIDE-1"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
discord-py-interactions = "^5.3.1"
discord-py-slash-command = "^4.2.1"
Flask = "^2.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
